# flow-studio-swarm

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CCodeSwarmflow-studio-swarmtest_summary.md  DEMO_RUN.md  GLOSSARY.md  Makefile  README.md  REPO_MAP.md  impl_changes_summary.md  pyproject.toml  test_summary.md
docs/: ADOPTING_SWARM_VALIDATION.md  ADOPTION_PLAYBOOK.md  AGENT_OPS.md  AGOPS_MANIFESTO.md  CHAOS_VERIFICATION.md  CONTEXT_BUDGETS.md  DEMO_RUN_OPERATORS.md  EVALUATION_CHECKLIST.md  FLOW_PROFILES.md  FLOW_STUDIO.md  FLOW_STUDIO_API.md  FLOW_STUDIO_BUILD_YOUR_OWN.md  FLOW_STUDIO_FIRST_EDIT.md  FLOW_STUDIO_UX_HANDOVER.md  FLOW_STUDIO_WISDOM_UI.md  GETTING_STARTED.md  GOLDEN_RUNS.md  INDEX.md  LEXICON.md  OPERATOR_FLOWS.md  PACKAGING_NOTES.md  PLAN_STEPWISE_VNEXT.md  PRE_DEMO_CHECKLIST.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_2_3_0.md  RELEASE_NOTES_2_3_2.md  ROADMAP_3_0.md  ROUTING_API.md  ROUTING_PROTOCOL.md  SELFTEST_SYSTEM.md  SELFTEST_TEMPLATES.md  STEPWISE_BACKENDS.md  STEPWISE_CONTRACT.md  SWARM_FLOWS.md  SYSTEM_MAP.md  TOUR_20_MIN.md  VALIDATION_STORY.md  WHITEPAPER.md  WHY_DEMO_SWARM.md  self_review.md
docs/adr/: ADR-001-spec-first-architecture.md  ADR-002-graph-native-flows.md  ADR-003-station-hierarchy.md  ADR-004-bounded-smart-routing.md
docs/archive/: PLAN_STEPWISE_VNEXT_v2.4.md  ROADMAP_2_4.md
docs/designs/: AUTO_REMEDIATION_DESIGN.md
plans/: phase_feasibility_assessment.md
swarm/: AGENTS.md  ARCHITECTURE_MULTI_PLATFORM.md  CLAUDE.md  NEXT_SPRINT_PLAN.md  SIDEQUESTS.md
swarm/api/: __init__.py  server.py
swarm/config/: flow_registry.py  flows.yaml  model_policy.json  model_registry.py  pack_registry.py  runtime.yaml  runtime_config.py  tool_profiles.py  tool_profiles.yaml
tests/: conftest.py  test_ac_freshness_checker.py  test_agent_logging.py  test_bijection.py  test_boundary_review.py  test_build_stepwise_routing.py  test_claude_engine_hydration.py  test_claude_session_artifacts.py  test_context_budget_guardrails.py  test_db_projection.py  test_demo_manifest.py  test_diff_scanner.py  test_event_validator.py  test_evolution.py  test_fact_extraction.py  test_flow_order_guardrail.py  test_flow_registry.py  test_flow_studio_schema_stability.py  test_frontmatter.py  test_handoff_io.py  test_macro_navigator_constraints.py  test_navigator_integration.py  test_pack_registry.py  test_parallel_execution.py  test_performance.py  test_phase6_verification.py  test_policy_evolution.py  test_prompt_builder.py  test_prompt_compiler.py  test_reference.py  test_reporting.py  test_resilient_db.py  test_route_from_routing_config.py  test_route_step_navigator.py  test_routing_driver_fixes.py  test_run_plan_api.py  test_run_tailer.py  test_runbase.py  test_schema_validation.py  test_spec_bridge.py  (+8 more)
(+562 files in other folders)
